<resources>
    <string name="app_name">ALCAssessment</string>
    <string name="exchange_cards">Card List</string>
    <string name="btc">BTC</string>
    <string name="dash">Dash</string>
    <string name="ngn">NGN</string>
    <string name="bitcoin">BITCOIN</string>
    <string name="naira">NAIRA</string>
    <string name="current_exchange_rate">Current Exchange Rate</string>
    <string name="sync_rates">Sync Rates</string>
    <string name="delete_card">Delete Card</string>
    <string name="faied_to_retrieve">N/A</string>
    <string name="enter_rate_to_convert">Enter Amount to convert</string>
    <string name="exchanged_value">NGN 0.0</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>

    <!--Settings Strings-->
    <string name="preload_random_title">Preload List with Random Cards</string>
    <string name="preload_random_summary">Card list will be pre-loaded with random cards when the card list is empty</string>
    <string name="preload_random_key">key_preload_random</string>
    <string name="preload_number_title">Number of cards</string>
    <string name="preload_number_key">key_preload_number</string>
    <string name="two_way_key">key_two_way</string>
    <string name="two_way_summary">Allow for the swapping of currencies in an exchange</string>
    <string name="two_way_title">Enable Two Way Exchange</string>
    <string name="pref_general">General</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">ALC 2.0 Intermediate Assessment App.</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_about_version_number">1.0</string>
    <string name="intent_git_title">Code</string>
    <string name="intent_git_summary">View App Source Code</string>
    <string name="list_layout_title">Layout Type Of Card List</string>
    <string name="list_layout_dialog_title">List Layout</string>
    <string name="list_layout_key">key_list_layout</string>
    <string name="list_type_def">Grid</string>
    <string name="number_of_preload_defVal">8</string>
    <string name="refresh_all_title">Refresh All Rates on App Start</string>
    <string name="refresh_all_summary">All Exchange rates will be refreshed will refreshed every time the app is opened</string>
    <string name="key_refresh_all">key_refresh_all</string>

    <!--Other Strings-->
    <string name="exchange_rate_error_text">Invalid Exchange Rate, ReSync Card to get valid exchange rate.</string>
    <string name="network_error_text">Network Unavailable, kindly check connection</string>
    <string name="empty_list_text">No Cards create yet, click the plus button to create your first card</string>

</resources>
