<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_general">
        <SwitchPreference
            android:title="@string/preload_random_title"
            android:summary="@string/preload_random_summary"
            android:key="@string/preload_random_key"
            android:defaultValue="false"
            />

        <ListPreference
            android:title="@string/preload_number_title"
            android:key="@string/preload_number_key"
            android:dependency="@string/preload_random_key"
            android:dialogTitle="@string/preload_number_title"
            android:entries="@array/preload_entries"
            android:entryValues="@array/preload_entries"
            android:defaultValue="@string/number_of_preload_defVal"
            />

        <SwitchPreference
            android:title="@string/two_way_title"
            android:summary="@string/two_way_summary"
            android:key="@string/two_way_key"
            android:defaultValue="true"
            />
        <ListPreference
            android:title="@string/list_layout_title"
            android:dialogTitle="@string/list_layout_dialog_title"
            android:key="@string/list_layout_key"
            android:entries="@array/list_type_entries"
            android:entryValues="@array/list_type_values"
            android:defaultValue="1"
            />

        <SwitchPreference
            android:title="@string/refresh_all_title"
            android:summary="@string/refresh_all_summary"
            android:key="@string/key_refresh_all"
            android:defaultValue="false"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">
        <Preference
            android:selectable="false"
            android:summary="@string/pref_about_summary"
            />
        <Preference
            android:title="@string/pref_about_version"
            android:summary="@string/pref_about_version_number"
            />
        <Preference android:title="@string/intent_git_title"
            android:summary="@string/intent_git_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/a-u-bello/ALCAssessment"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>