<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="end"
            android:text="@string/btc"
            android:id="@+id/convertFrom"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dash"
            android:src="@drawable/dash"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/dash"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/ngn"
            android:gravity="start"
            android:id="@+id/convertTo"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conversion_rate"
        android:text="@string/current_exchange_rate"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exchanged_value"
        android:text="@string/exchanged_value"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conversion_box"
        android:hint="@string/enter_rate_to_convert"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="number"/>
</LinearLayout>