<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.cards.CardsActivity"
    app:cardElevation="20dp"
    app:cardCornerRadius="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/otherCurrency"
            android:text="@string/ngn"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dash"
            android:src="@drawable/dash"
            android:paddingTop="8dp"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cryptoCurrency"
            android:text="@string/btc"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_below="@id/otherCurrency"
            android:background="@android:color/black"
            android:id="@+id/divider_one"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textCryptCurrency"
            android:text="@string/bitcoin"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/divider_one"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textOtherCurrency"
            android:text="@string/naira"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/divider_one"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_below="@id/textOtherCurrency"
            android:background="@android:color/black"
            android:id="@+id/divider_two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentRate"
            android:text="@string/current_exchange_rate"
            android:layout_below="@id/divider_two"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_two"
            android:id="@+id/rate_in_sync"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_below="@id/currentRate"
            android:background="@android:color/black"
            android:id="@+id/divider_three"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/divider_three"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sync_rates"
                android:src="@drawable/sync_currency_rate"
                android:id="@+id/sync_rates"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="start|center"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_card"
                android:src="@drawable/delete_card"
                android:id="@+id/delete_card"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="end|center"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>